src/harmony/Modal/Modal.module.css
.ModalCross {
    position: absolute;
    z-index: 102;
    right: var(--gap-m);
    top: var(--gap-m);
}

.ModalOverlay {
    position: fixed;
    z-index: 101;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;

    display: flex;
    justify-content: center;
    align-items: center;

    width: 100%;
    height: 100%;

    background-color: rgba(18, 18, 22, 0.9);
}

.ModalContent {
    padding: var(--gap-m);
}

.ModalHeader {
    padding: var(--gap-m);
}

.ModalHeader ~ .ModalContent {
    padding-top: var(--gap-s);
}

.ModalHeader_view_warning {
    background-color: var(--warn-900);
    color: var(--warn-300);
}

.ModalHeader_view_danger {
    background-color: var(--danger-900);
    color: var(--danger-300);
}

.Modal {
    box-sizing: border-box;
    position: absolute;
    z-index: 101;

    display: flex;
    flex-direction: column;
    gap: var(--gap-s);

    min-width: 300px;
    min-height: 200px;
    max-height: 90%;
    width: var(--modal-width);
    overflow: hidden;

    border-radius: var(--radius-l);
    background-color: var(--layer);
    box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.3);
}

